[package]
name = "spl-collections"
version = "0.0.0"
description = "Serialization-aware collection wrappers for Solana account data"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
borsh = ["dep:borsh"]
wincode = ["dep:wincode"]

[dependencies]
borsh = { version = "1.0", features = ["derive"], default-features = false, optional = true }
wincode = { version = "0.4.4", features = ["alloc", "derive"], default-features = false, optional = true }

[dev-dependencies]
spl-collections = { path = ".", features = ["borsh", "wincode"] }

[lib]
crate-type = ["lib"]
