[package]
name = "spl-program-error"
version = "0.8.0"
description = "Library for Solana Program error attributes and derive macro for creating them"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"

[dependencies]
num-derive = "0.4"
num_enum = "0.7"
num-traits = "0.2"
solana-msg = "3.0.0"
solana-program-error = "3.0.0"
spl-program-error-derive = { version = "0.6.0", path = "../program-error-derive" }
thiserror = "2.0"

[dev-dependencies]
lazy_static = "1.5"
serial_test = "3.2"
solana-sha256-hasher = "3.0.0"
solana-sysvar = "3.0.0"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
